--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,16 @@
         </activity>
 
         <activity android:name=".activity.CadastroActivity"/>
+        <activity android:name=".activity.CadastroExcluirActivity"/>
+        <service android:name=".service.ServiceTimer"/>
+
+        <receiver android:name=".service.BroadcastReceiver">
+            <intent-filter>
+                <action android:name="POMODORO"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </receiver>
+
     </application>
 
 </manifest>
